// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders correctly when logged in 1`] = `
<div
  className="App"
>
  <Connect(Header) />
  <div
    className="App__content"
  >
    <Connect(Drawer) />
    <Switch>
      <Route
        exact={true}
        path="/"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/inbox"
        render={[Function]}
      />
      <Route
        render={[Function]}
      />
    </Switch>
  </div>
</div>
`;

exports[`<App /> renders correctly when logged in and loading emails 1`] = `
<div
  className="App"
>
  <LoadingOverlay
    loadingOverlayState="VISIBLE"
    onClick={[Function]}
  />
  <Connect(Header) />
  <div
    className="App__content"
  >
    <Connect(Drawer) />
    <Switch>
      <Route
        exact={true}
        path="/"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/inbox"
        render={[Function]}
      />
      <Route
        render={[Function]}
      />
    </Switch>
  </div>
</div>
`;

exports[`<App /> renders correctly when not logged in 1`] = `
<div
  className="App"
>
  Logging in, please wait...
</div>
`;
